# MCP-Server

./: README.md  pyproject.toml  requirements.txt  test_server.py
docs/: DATABASE.md  EXCEL.md  SERVER.md
src/: server.py
src/lib/: gatekeeper.py
src/modules/: __init__.py
src/modules/approval/: __init__.py  manager.py
src/modules/database/: __init__.py
src/modules/database/config/: __init__.py  connection.py  db.py  skills.py  tools.py
src/modules/database/skills/: database_admin.md  database_query.md
src/modules/database/tools/: __init__.py  admin.py  core.py  schema.py  session_mgmt.py
src/modules/excel/: __init__.py
src/modules/excel/operations/: __init__.py
src/modules/excel/routes/: __init__.py
src/modules/excel/tools/: __init__.py  excel.py
src/modules/remctl/: __init__.py  main.py
src/modules/remctl/config/: __init__.py  session.py  tools.py
src/modules/remctl/skills/: SERVER_CONNECT.md  SERVER_FILEOPS.md  SERVER_MONITOR.md  server_management.md
src/modules/remctl/tools/: core.py  filesystem.py  session_mgmt.py  system.py
src/modules/server/: __init__.py  server.py
src/modules/server/config/: __init__.py  __main__.py  ssh_session.py  websocket_handler.py
src/modules/server/routes/: __init__.py
src/modules/server/tools/: __init__.py  server.py  server_tools.py
src/routes/: __init__.py  database.py  remctl.py  skills.py
src/tools/: excel.py
