[project]
name = "excel-mcp-server"
version = "0.1.7"
description = "Excel MCP Server for manipulating Excel files"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.10.1",
    "fastmcp>=2.0.0,<3.0.0",
    "openpyxl>=3.1.5",
    "typer>=0.16.0",
    "fastapi>=0.135.3",
    "paramiko>=4.0.0",
    "sqlalchemy>=2.0.49",
    "psycopg2-binary>=2.9.11",
    "pymysql>=1.1.2",
    "pyodbc>=5.3.0",
    "cx-oracle>=8.3.0",
    "python-dotenv>=1.1.1",
]
[[project.authors]]
name = "haris"
email = "haris.musa@outlook.com"

[project.scripts]
excel-mcp-server = "excel_mcp.__main__:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/excel_mcp"]

[tool.hatch.build]
packages = ["src/excel_mcp"]
